[gd_scene load_steps=9 format=3 uid="uid://5rm6deqt6hlv"]

[ext_resource type="Script" path="res://scripts/deck_menu.gd" id="1_s2jpl"]
[ext_resource type="FontFile" uid="uid://dt55moadn75gc" path="res://assets/font/Roboto_Mono/static/RobotoMono-Bold.ttf" id="2_8jniq"]
[ext_resource type="Shader" path="res://scripts/shaders/deck_menu_blur.gdshader" id="2_653sw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dq7m1"]
shader = ExtResource("2_653sw")
shader_parameter/intensity = 2.0

[sub_resource type="Gradient" id="Gradient_5713e"]
colors = PackedColorArray(0, 0, 0, 0, 0.162066, 0.162066, 0.162066, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5o6nb"]
gradient = SubResource("Gradient_5713e")
width = 700
height = 720
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhycy"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.513233, 0.513233, 0.513233, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 50.0
expand_margin_right = 5.0
expand_margin_bottom = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3u5a7"]
bg_color = Color(0.252028, 0.252028, 0.252028, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.873298, 0.873298, 0.873298, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="DeckMenu" type="Control"]
custom_minimum_size = Vector2(700, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -580.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2jpl")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
material = SubResource("ShaderMaterial_dq7m1")
layout_mode = 0
offset_right = 700.0
offset_bottom = 720.0
texture = SubResource("GradientTexture2D_5o6nb")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 0
offset_right = 700.0
offset_bottom = 720.0
texture = SubResource("GradientTexture2D_5o6nb")

[node name="Panel" type="Panel" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uhycy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 6828.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 5

[node name="ScrollDownButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 710.0
offset_top = 560.0
offset_right = 949.0
offset_bottom = 615.0
theme_override_fonts/font = ExtResource("2_8jniq")
theme_override_font_sizes/font_size = 35
text = "Scroll down"

[node name="ScrollUpButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 710.0
offset_top = 100.0
offset_right = 907.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("2_8jniq")
theme_override_font_sizes/font_size = 35
text = "Scroll up"

[node name="ScrollBar" type="Panel" parent="."]
custom_minimum_size = Vector2(8, 16)
layout_mode = 0
offset_left = 678.0
offset_top = 8.0
offset_right = 686.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3u5a7")

[connection signal="pressed" from="ScrollDownButton" to="." method="_on_scroll_down_button_pressed"]
[connection signal="pressed" from="ScrollUpButton" to="." method="_on_scroll_up_button_pressed"]
